# asio_srt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW_FINAL.md  CODE_REVIEW_SUMMARY.md  DIRECTORY_MAP.md  FINAL_PROJECT_SUMMARY.md  FINAL_REPORT.md  ORGANIZATION_COMPLETE.md  ORGANIZATION_REPORT.md  PROJECT_ORGANIZATION_FINAL.md  README.md  SHARED_STRAND_COMPLETE.md  SHARED_STRAND_UPDATE.md  START_HERE.md  STRUCTURE.md
depends/scripts/: depends.cmake  resolve.py  resolve_utils.py
docs/: DOCUMENTATION_REORGANIZATION.md  ERROR_CODE_REFACTORING.md  ERROR_EVENT_HANDLING_ANALYSIS.md  ERROR_HANDLING.md  INDEX.md  QUICK_REFERENCE.md  README.md  STRUCTURE.md  TIMEOUT_IMPLEMENTATION_COMPARISON.md
docs/api/: README.md
docs/api/acore/: ASYNC_EVENT_ANALYSIS.md  ASYNC_PRIMITIVES.md  COROUTINE_ONLY.md  README.md
docs/archive/: DOCUMENTATION_REORGANIZATION_V2.md  README.md
docs/design/: QUEUE_COMPARISON.md  README.md  REORGANIZATION.md  SHARED_STRAND_ENHANCEMENT.md  SHARED_STRAND_SAFETY.md  STRAND_TIMING_FAQ.md
docs/design/error-handling/: ERROR_CODE_CHANGES.md  ERROR_EVENT_CHANGES.md  ERROR_EVENT_IMPLEMENTATION.md  ERROR_NOTIFICATION_STRATEGY.md
docs/design/logging/: LOGGING_ENHANCED.md  LOGGING_ENHANCEMENT.md
docs/design/srt/: SRT_NATIVE_CALLBACKS.md  SRT_OPTIONS_V2.md  SRT_V2_FEATURES.md
docs/design/timeout/: TIMEOUT_API.md
docs/development/: PROJECT_STATUS.md  README.md  TESTING_COMPLETE.md  TEST_RESULTS.md
docs/development/acore/: COMPLETION_REPORT.txt  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README_TESTS.md
docs/development/code-reviews/: ACORE_FULL_CODE_REVIEW.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_SUMMARY.md  COMPLETE_REVIEW_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_CODE_REVIEW_ALL_COMPONENTS.md  FINAL_REPORT.md  HONEST_CODE_REVIEW_REPORT.md  README.md  README_REVIEW.md  REVIEW_COMPARISON.md  REVIEW_RESULTS.md
docs/development/code-reviews/archive/: BUGS_AND_FIXES_CHECKLIST.md  README.md
docs/development/reorganization/: CLEANUP_CHECKLIST.md  DIRECTORY_CLEANUP_SUMMARY.md  PROJECT_CLEANUP_COMPLETE.md  QUICK_REFERENCE_STRUCTURE.md  README.md  REFACTORING_2025-10-19.md  TESTS_REORGANIZATION.md
docs/development/summaries/: CHANGELOG_DISPATCHER.md  CHANGES_SUMMARY.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_V2.md  NEW_FEATURES.md  README.md  SRT_IMPLEMENTATION_SUMMARY.md  UPDATE_SUMMARY.md
docs/guides/: ACORE_GUIDE.md  CALLBACK_AND_OPTIONS_GUIDE.md  QUICK_START.md  README.md  SRT_SOCKET_GUIDE.md
docs/guides/bcast/: ASYNC_EVENT_REFACTORED.md  ASYNC_QUEUE_SIMPLIFICATION.md  ASYNC_SEMAPHORE_EXPLAINED.md  BATCH_OPERATIONS.md  BCAST_GUIDE.md  README.md  TIMEOUT_FEATURES.md
examples/: CMakeLists.txt  custom_logging_example.cpp  option_test_example.cpp  srt_advanced_server.cpp  srt_client_example.cpp  srt_client_v2_example.cpp  srt_resilient_client_example.cpp  srt_server_example.cpp  srt_server_v2_example.cpp  srt_streaming_example.cpp
examples/acore/: CMakeLists.txt  advanced_example.cpp  barrier_latch_example.cpp  batch_example.cpp  benchmark.cpp  coroutine_example.cpp  event_test.cpp  example.cpp  example_waitgroup_simple.cpp  mutex_example.cpp  queue_benchmark.cpp  rate_limiter_example.cpp  real_world_example.cpp  semaphore_test.cpp  shared_strand_example.cpp  timeout_example.cpp  timer_example.cpp
examples/bcast/: CMakeLists.txt  batch_example.cpp
src/: CMakeLists.txt
src/acore/: CANCELLATION_SUPPORT.md  CMakeLists.txt  README.md  WAITGROUP_USAGE.md  async_auto_reset_event.hpp  async_barrier.hpp  async_event.hpp  async_latch.hpp  async_mutex.hpp  async_periodic_timer.hpp  async_queue.hpp  async_rate_limiter.hpp  async_semaphore.hpp  async_waitgroup.hpp  build_test.sh  build_test_waitgroup.sh  dispatcher.hpp  handler_traits.hpp  test_cancellation.cpp  test_waitgroup  test_waitgroup.cpp
src/aentry/: asrt_entry.cpp
src/asrt/: CMakeLists.txt  srt_acceptor.cpp  srt_acceptor.hpp  srt_error.h  srt_log.hpp  srt_reactor.cpp  srt_reactor.h  srt_reactor.hpp  srt_socket.cpp  srt_socket.hpp  srt_socket_options.cpp  srt_socket_options.hpp  timing_wheel.hpp
src/bcast/: API对比.md  CMakeLists.txt  README.md  advanced_example.cpp  async_event.hpp  async_event_fixed.hpp  async_queue.cpp  async_queue.hpp  async_queue_simplified.hpp  async_queue_v2.hpp  async_semaphore.hpp  benchmark.cpp  coroutine_example.cpp  dispatcher.cpp  dispatcher.hpp  example.cpp  real_world_example.cpp  timeout_example.cpp  代码简化说明.md  使用指南.md  协程API指南.md  快速开始.md  项目总结.md
tests/: CMakeLists.txt  README.md  test_custom_log.cpp  test_custom_log_simple.sh  test_logging_enhancement.cpp  test_srt_reactor.cpp  test_srt_socket_acceptor.cpp
tests/acore/: CMakeLists.txt  README_NEW_TESTS.md  REORGANIZATION_SUMMARY.md  SHARED_STRAND_TEST_REPORT.md  TEST_SUMMARY.md  quick_test.sh  test_async_auto_reset_event.cpp  test_async_barrier.cpp  test_async_event.cpp  test_async_latch.cpp  test_async_mutex.cpp  test_async_periodic_timer.cpp  test_async_queue.cpp  test_async_rate_limiter.cpp  test_async_semaphore.cpp  test_cancellation.cpp  test_dispatcher.cpp  test_shared_strand.cpp  test_shared_strand_simple.cpp  test_waitgroup.cpp  test_waitgroup_race.cpp
tests/asrt/: CMakeLists.txt  test_check_default_messageapi.cpp  test_logging_enhancement.cpp  test_srt_socket_acceptor.cpp
